webkit2gtk (2.8.3+dfsg1-1) UNRELEASED; urgency=medium

  * New upstream release.

 -- Alberto Garcia <berto@igalia.com>  Sat, 16 May 2015 12:36:58 +0300

webkit2gtk (2.8.2+dfsg1-2) unstable; urgency=medium

  * debian/rules:
    + Disable the gold linker, it's causing problems in arm64 at least.

 -- Alberto Garcia <berto@igalia.com>  Wed, 13 May 2015 14:29:30 +0300

webkit2gtk (2.8.2+dfsg1-1) unstable; urgency=medium

  [ Alberto Garcia ]
  * New upstream release.

  [ Helge Deller ]
  * debian/rules:
    + Disable debugging symbols in hppa (Closes: #784176).

  [ Andreas Schwab ]
  * debian/patches/fix-ftbfs-m68k.patch:
    + Fix FTBFS in m68k.

 -- Alberto Garcia <berto@igalia.com>  Tue, 12 May 2015 15:31:38 +0300

webkit2gtk (2.8.1+dfsg1-1) unstable; urgency=medium

  * New upstream release.
  * Drop all patches, except:
    + debian/patches/restore_sparc_code.patch:
      - Refresh and update it to make it work with cmake.
    + debian/patches/install-minibrowser.patch:
      - Update for this release.
  * debian/libwebkit2gtk-4.0-37.symbols:
    + Update.
  * debian/libwebkit2gtk-4.0-doc.install:
    + Update documentation path in the source tree.
  * debian/copyright:
    + Update copyright years.
  * debian/control:
    + Add build dependencies on libgnutls28-dev and libnotify-dev.

 -- Alberto Garcia <berto@igalia.com>  Mon, 27 Apr 2015 21:22:35 +0300

webkit2gtk (2.6.2+dfsg1-4) unstable; urgency=medium

  * debian/patches/fix-ftbfs-hppa.patch:
    + Fix FTBFS in HPPA (Closes: #776281).
  * debian/libwebkit2gtk-4.0-doc.links:
    + Add symbolic link to make the documentation appear in devhelp
      (Closes: #777589).
  * debian/patches/fix-gstreamer-leak.patch:
    + Fix memory leak in GStreamer code.
  * debian/patches/remote-inspector.patch:
    + Make the remote inspector work again.
  * debian/patches/render-block-cast.patch:
    + Fix invalid cast in WebCore::RenderBlock::blockSelectionGaps.
  * debian/patches/fix-jit-crash.patch: