@@ -1,6 +1,10 @@
 webkit2gtk (2.8.3+dfsg1-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * debian/rules:
+    + The default linker uses too much memory and it makes the build fail
+      in i386, so let's get back to the old behavior and disable gold in
+      arm64 only.
 
  -- Alberto Garcia <berto@igalia.com>  Sat, 16 May 2015 12:36:58 +0300
 
